Fix Docker file and Add modules States, User.

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -5,6 +5,7 @@ master = true
 processes = 4
 theads = 4
 memory-report = true
-module = myapi:application
+module = myapi:aplication
 uid = uwsgi
 route = ^/status donotlog:
+lazy-apps = true
