--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,20 +1,28 @@
-version: '3'
+version: '3.3'
 
 services:
-  api:
-    image: api_local
-    restart: always
-    ports:
-      - "5000:5000"
-
   db:
     image: postgres:9.6-alpine
     restart: always
     ports:
       - "5432:5432"
     environment:
-#      POSTGRES_USER: postgres
+      POSTGRES_USER: user
       POSTGRES_PASSWORD: 123456789
+      POSTGRES_DB: bkr_db
     volumes:
-    - ./data:/var/lib/postgresql/data
-
+      - ./data:/var/lib/postgresql/data
+  
+  api:
+    build: .
+    volumes:
+      - ./:/app
+    restart: always
+    command: uwsgi --thunder-lock --ini uwsgi.ini
+#    command: python myapi.py
+    ports:
+      - "5000:5000"
+    links:
+      - db
+    depends_on:
+      - db
